<resources>
    <string name="app_name">Personal Agenda</string>
    <string name="no_data_available">There is no data currently available.\n\nPlease make sure you have enabled\nthe Calendar Permissions and\nthere are events available in your Agenda…\n\n\n:)</string>
    <string name="enable_permissions">"It is essential for this application to use the Calendar data.\nPlease enable the Calendar permission."</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="all_day">Duration: ALL DAY</string>
    <string name="event_time">Duration: %1$s - %2$s</string>
    <string name="event_location">Location: %1$s</string>
    <string name="event_attendees">Attendees: %1$s</string>
    <string name="event_notes">Notes: %1$s</string>
    <string name="attendee_separator">;\u0020</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quick_meeting">Quick Meeting</string>
    <string name="settings_title">Agenda Settings</string>
    <string name="settings_meeting_duration">Quick Meeting Duration\n(in minutes):</string>
    <string name="settings_meeting_30_min">30</string>
    <string name="settings_meeting_60_min">60</string>
    <string name="settings_events_timespan">Future timespan to load\nEvents from (in days):</string>
    <string name="quick_meeting_title">Quick Meeting</string>
    <string name="quick_meeting_intro">Your next Quick meeting\ncould start at:</string>
</resources>
